--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -883,7 +883,7 @@
   <string name="Tap3_ShareDevice_NoneShareFriends">Personne</string>
   <string name="Tap3_ShareDevice_NotYourself">Vous ne pouvez pas partager avec vous&#8211;même</string>
   <string name="Tap3_ShareDevice_Shared">Partagé</string>
-  <string name="Tap3_ShareDevice_SharedContents">Contenu partagés</string>
+  <string name="Tap3_ShareDevice_SharedContents">720°Cam Contenu partagés</string>
   <string name="Tap3_ShareDevice_SharedUsers">Utilisateurs partagés</string>
   <string name="Tap3_ShareDevice_SuccessTips">Partager avec succès</string>
   <string name="Tap3_ShareDevice_Tips">Ce dispositif ne peut pas être partagée avec tous les autres utilisateurs</string>
