--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -883,7 +883,7 @@
   <string name="Tap3_ShareDevice_NoneShareFriends">Nessuna</string>
   <string name="Tap3_ShareDevice_NotYourself">Non condividere</string>
   <string name="Tap3_ShareDevice_Shared">Condivisa</string>
-  <string name="Tap3_ShareDevice_SharedContents">contenuti condivisi</string>
+  <string name="Tap3_ShareDevice_SharedContents">720°Cam contenuti condivisi</string>
   <string name="Tap3_ShareDevice_SharedUsers">Utenti condivisi</string>
   <string name="Tap3_ShareDevice_SuccessTips">Condiviso con successo</string>
   <string name="Tap3_ShareDevice_Tips">Questo dispositivo non può essere condiviso con nessun altro utente</string>
