--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -883,7 +883,7 @@
   <string name="Tap3_ShareDevice_NoneShareFriends">Никто</string>
   <string name="Tap3_ShareDevice_NotYourself">Невозможно поделиться себе</string>
   <string name="Tap3_ShareDevice_Shared">Общий</string>
-  <string name="Tap3_ShareDevice_SharedContents">Общие cодержание</string>
+  <string name="Tap3_ShareDevice_SharedContents">720°Cam Общие cодержание</string>
   <string name="Tap3_ShareDevice_SharedUsers">Общие пользователи</string>
   <string name="Tap3_ShareDevice_SuccessTips">Общий доступ успешен</string>
   <string name="Tap3_ShareDevice_Tips">Это устройство не может использоваться совместно с любыми несколькими пользователями</string>
