--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -883,7 +883,7 @@
   <string name="Tap3_ShareDevice_NoneShareFriends">Hiçbiri</string>
   <string name="Tap3_ShareDevice_NotYourself">Kendiniz için paylaşmayınız</string>
   <string name="Tap3_ShareDevice_Shared">Paylaşılan</string>
-  <string name="Tap3_ShareDevice_SharedContents">Paylaşılan içerik</string>
+  <string name="Tap3_ShareDevice_SharedContents">720°Cam Paylaşılan içerik</string>
   <string name="Tap3_ShareDevice_SharedUsers">Paylaşılan kullanıcılar</string>
   <string name="Tap3_ShareDevice_SuccessTips">Başarılı olarak paylaşıldı</string>
   <string name="Tap3_ShareDevice_Tips">Bu cihaz, herhangi bir daha fazla kullanıcı ile paylaşılamaz</string>
