--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -149,7 +149,7 @@
   <string name="DOOR_UNCALL">nhỡ</string>
   <string name="DOOR_VOICE">Giọng nói</string>
   <string name="DOOR_WIFI_HINT">Trạng thái đèn LED</string>
-  <string name="DailyGreatTips_Full">số lượng các Daily Great Bộ sưu tập đã đạt đến mức giới hạn trên 50, đi xóa bỏ?</string>
+  <string name="DailyGreatTips_Full">số lượng các My Favorite Bộ sưu tập đã đạt đến mức giới hạn trên 50, đi xóa bỏ?</string>
   <string name="Daily_Great_NO_CONTENTS">Không có nội dung</string>
   <string name="Dec">Dec.</string>
   <string name="Delete_Share">Xóa chia sẻ?</string>
@@ -650,8 +650,8 @@
   <string name="Tap1_Album_PutInVR">Đặt điện thoại di động vào kính VR</string>
   <string name="Tap1_Album_Share_Description">Thêm mô tả</string>
   <string name="Tap1_Album_Share_NotInstalledTips">\"%s\" chưa được cài đặt, vui lòng cài đặt và thử lại</string>
-  <string name="Tap1_Album_Share_To_Daily_Great">Các nội dung được chia sẻ sẽ được lưu vào\"Daily Great \"</string>
-  <string name="Tap1_BigPic_FavoriteTips">Sưu tập hình trong mục \"Daily Great\"</string>
+  <string name="Tap1_Album_Share_To_Daily_Great">Các nội dung được chia sẻ sẽ được lưu vào\"My Favorite \"</string>
+  <string name="Tap1_BigPic_FavoriteTips">Sưu tập hình trong mục \"My Favorite \"</string>
   <string name="Tap1_CameraFun_Standby">Standby</string>
   <string name="Tap1_CameraFun_Standby_Description">Từ Standby chuyển sang Hibernate sẽ không thể thực hiện hoạt động gì nữa</string>
   <string name="Tap1_CameraFun_Standby_OnTips">Đang chụp Time&#8211;lapse, không thể chuyển sang Standby</string>
@@ -666,7 +666,7 @@
   <string name="Tap1_CameraFun_Timelapse_GoWatch">Xem</string>
   <string name="Tap1_CameraFun_Timelapse_Interval">Khoảng chờ</string>
   <string name="Tap1_CameraFun_Timelapse_NotStart">Đang đến</string>
-  <string name="Tap1_CameraFun_Timelapse_OnTips">Time&#8211;lapse sẽ tự động tắt khi chụp xong và lưu vào\"Daily Great\"</string>
+  <string name="Tap1_CameraFun_Timelapse_OnTips">Time&#8211;lapse sẽ tự động tắt khi chụp xong và lưu vào\"My Favorite \"</string>
   <string name="Tap1_CameraFun_Timelapse_RecordTime">Thời gian chụp</string>
   <string name="Tap1_CameraFun_Timelapse_Setting">Bắn súng</string>
   <string name="Tap1_CameraFun_Timelapse_StandbyTips">Bắt đầu time&#8211;lapse trước khi đóng Standby</string>
@@ -675,7 +675,7 @@
   <string name="Tap1_CameraFun_Timelapse_StartTimeFail">Đặt sớm hơn thời gian hiện tại, hãy cài đặt lại</string>
   <string name="Tap1_CameraFun_Timelapse_Startnow">Bắt đầu bây giờ</string>
   <string name="Tap1_CameraFun_Timelapse_Synthesis">Đang nối lại</string>
-  <string name="Tap1_CameraFun_Timelapse_SynthesisTips">Nối thành công, hãy kiểm tra trong \"Daily Great\"</string>
+  <string name="Tap1_CameraFun_Timelapse_SynthesisTips">Nối thành công, hãy kiểm tra trong \"My Favorite \"</string>
   <string name="Tap1_CameraFun_Timelapse_Tips">Cần tắt Standby trước khi chụp time&#8211;lapse, bạn chắc không?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">Chắc</string>
   <string name="Tap1_CameraFun_Timelapse_document">Ghi giữ thêm khoảnh khắc với tính năng Time&#8211;lapse</string>
@@ -803,8 +803,8 @@
   <string name="Tap2_Timelapse_fail">Video time&#8211;lapse không thể tạo được do mất kết nối</string>
   <string name="Tap2_Timelapse_screenshot">Chụp trực tuyến</string>
   <string name="Tap2_Timelapse_title">Ảnh Time&#8211;lapse</string>
-  <string name="Tap2_TitleName">Daily Great</string>
-  <string name="Tap2_TitleName_Sentence">Enjoy Everyday</string>
+  <string name="Tap2_TitleName">My Favorite</string>
+  <string name="Tap2_TitleName_Sentence">My Favorite</string>
   <string name="Tap2_share_sharevideo">Tôi đã chia sẻ một video với bạn</string>
   <string name="Tap2_share_sharevideo_tips">Tôi đã tạo 1 ảnh time&#8211;lapse từ Cleverdog, hãy xem nào!</string>
   <string name="Tap2_share_unabletoshare">Chưa cài Wechat, không thể chia sẻ</string>
@@ -883,7 +883,7 @@
   <string name="Tap3_ShareDevice_NoneShareFriends">không ai</string>
   <string name="Tap3_ShareDevice_NotYourself">Không chia sẻ cho bạn</string>
   <string name="Tap3_ShareDevice_Shared">Thuê chung</string>
-  <string name="Tap3_ShareDevice_SharedContents">Nội dung chia sẻ</string>
+  <string name="Tap3_ShareDevice_SharedContents">720°Cam Nội dung chia sẻ</string>
   <string name="Tap3_ShareDevice_SharedUsers">Người dùng chia sẻ</string>
   <string name="Tap3_ShareDevice_SuccessTips">Chia se thành công</string>
   <string name="Tap3_ShareDevice_Tips">Thiết bị này không thể được chia sẻ với bất kỳ người dùng hơn</string>
